logs/Slang/generated/yosys/asicworld_code_hdl_models_full_adder_gates.sv.log
name: asicworld_code_hdl_models_full_adder_gates
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_full_adder_gates.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_full_adder_gates.v:12:1: error: expected member
and U_and1 (and1,x,y),
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_full_adder_gates.v:15:1: error: expected member
or  U_or   (carry,and1,and2,and3);
^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/asicworld/code_hdl_models_full_adder_gates.v:16:1: error: expected member
xor U_sum (sum,x,y,z);
^~~
